--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@melt-ui/pp": "^0.3.2",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
@@ -28,8 +29,11 @@
 		"@threlte/core": "^7.3.1",
 		"@threlte/extras": "^8.11.5",
 		"@threlte/rapier": "^2.0.1",
+		"clsx": "^2.1.1",
 		"simplex-noise": "^4.0.3",
 		"svelte-tweakpane-ui": "^1.3.0",
-		"three": "^0.159.0"
+		"tailwind-merge": "^2.4.0",
+		"three": "^0.159.0",
+		"vite-plugin-tailwind-purgecss": "^0.3.3"
 	}
 }
