--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.4",
+		"sass": "^1.77.8",
 		"svelte": "^4.2.7",
 		"tailwindcss": "^3.4.4",
 		"vite": "^5.0.3"
@@ -30,6 +31,7 @@
 		"@threlte/extras": "^8.11.5",
 		"@threlte/rapier": "^2.0.1",
 		"clsx": "^2.1.1",
+		"compass-mixins": "^0.12.12",
 		"simplex-noise": "^4.0.3",
 		"svelte-tweakpane-ui": "^1.3.0",
 		"tailwind-merge": "^2.4.0",
